test/valid/fc36956_ArrayList/RegularNodeInteger.plume


class RegularNodeInteger extends RegularNode is
	field myValue : Integer
	
	method getValue : () -> Integer is
		myValue