test/invalid/YouMustExtendObject/YouMustExtendObject.plume
/**
 * @author Robin Burgess 36815
 */
 class YouMustExtendObject is
	field aVariable : Integer
	method aMethod : () -> Integer is aVariable * 2